add requireMOD autoloader
add: 前提MOD（A.K.氏作PotionExtention）の自動DLシステムを導入
add: 原木箱2種
change: 当MODのコアモッド機能を暫定的に停止。いずれ廃止又は別用途での仕様に切り替える予定。
change: LoggerにFMLLogと同じlog4jを採用
change: 前提MODチェック機能を追加（ただし機能していない）
fix: コメントアウトしていた不要メソッドを削除
fix: 木炭箱の燃焼時間を14400→16000に（バニラの石炭ブロック燃焼時間変更に準拠）
fix: タマゴバスケットと圧縮メロンがブロック更新を正常に受け取らない
fix: 瓶系アイテムを破壊した時にドロップアイテムのメタデータがおかしい
fix: 茶の木が骨粉で成長しない
fix: 白玉髄のフロアランプに効果がついていなかった
fix: ライセンス文のアホな綴りミスの修正
fix: 効果音が追加できていなかったのを修正
fix: Railcraft様のコークス炉レシピ追加が正常にできていなかった
fix: モミジMOD様のアイテム取得が正常にできていなかった
API: 当MODのAPIにpackage-infoを追加
ex: craftguide様との連携（ただし失敗中）
ex: Forestry様との連携要素（失敗中）

--- a/resources/assets/dcsapplemilk/lang/en_US.lang
+++ b/resources/assets/dcsapplemilk/lang/en_US.lang
@@ -9,6 +9,8 @@ tile.defeatedcrow.WoodBox_force.name=Force Wood Log Box
 tile.defeatedcrow.WoodBox_sakura.name=Cherry Log Box
 tile.defeatedcrow.WoodBox_momizi.name=Autumn Leaf Log Box
 tile.defeatedcrow.WoodBox_JPcedar.name=Japanese Ceder Log Box
+tile.defeatedcrow.WoodBox_darkoak.name=Dark Oak Log Box
+tile.defeatedcrow.WoodBox_acacia.name=Acacia Log Box
 tile.defeatedcrow.mushroomBox_red.name=Red Mushroom Box
 tile.defeatedcrow.mushroomBox_brown.name=Brown Mushroom Box
 tile.defeatedcrow.compressedMelon.name=Compressed Melon
