--- a/resources/assets/dcsapplemilk/lang/ja_JP.lang
+++ b/resources/assets/dcsapplemilk/lang/ja_JP.lang
@@ -9,6 +9,8 @@ tile.defeatedcrow.WoodBox_force.name=フォースウッドの丸太箱
 tile.defeatedcrow.WoodBox_sakura.name=桜の丸太箱
 tile.defeatedcrow.WoodBox_momizi.name=モミジの丸太箱
 tile.defeatedcrow.WoodBox_JPcedar.name=杉の丸太箱
+tile.defeatedcrow.WoodBox_darkoak.name=ダークオークの丸太箱
+tile.defeatedcrow.WoodBox_acacia.name=アカシヤの丸太箱
 tile.defeatedcrow.mushroomBox_red.name=赤キノコブロック
 tile.defeatedcrow.mushroomBox_brown.name=茶キノコブロック
 tile.defeatedcrow.compressedMelon.name=圧縮されたメロン
