--- a/resources/assets/dcsapplemilk/lang/ja_JP.lang
+++ b/resources/assets/dcsapplemilk/lang/ja_JP.lang
@@ -219,7 +219,8 @@ tile.defeatedcrow.blockCordial_0.name=リンゴ酒
 tile.defeatedcrow.blockCordial_1.name=紅茶酒
 tile.defeatedcrow.blockCordial_2.name=カシス酒
 tile.defeatedcrow.blockCordial_3.name=梅酒
-tile.defeatedcrow.largeBottle.name=空の一升瓶
+tile.defeatedcrow.emptyBottle.name=空の一升瓶
+tile.defeatedcrow.largeBottle.name=焼酎ボトル
 tile.defeatedcrow.largeBottle.name=日本酒ボトル
 tile.defeatedcrow.largeBottle.name=ビールボトル
 tile.defeatedcrow.largeBottle.name=ワインボトル
@@ -234,7 +235,7 @@ tile.defeatedcrow.largeBottle.name=カラメル大瓶
 tile.defeatedcrow.largeBottle.name=ハチミツ大瓶
 tile.defeatedcrow.largeBottle.name=瓶詰めナッツ
 tile.defeatedcrow.largeBottle.name=瓶詰めベリージャム
-tile.defeatedcrow.largeBottle.name=空の一升瓶
+tile.defeatedcrow.largeBottle.name=焼酎ボトル
 tile.defeatedcrow.largeBottle.name=日本酒ボトル
 tile.defeatedcrow.largeBottle.name=ビールボトル
 tile.defeatedcrow.largeBottle.name=ワインボトル
@@ -249,7 +250,7 @@ tile.defeatedcrow.largeBottle.name=カラメル大瓶
 tile.defeatedcrow.largeBottle.name=ハチミツ大瓶
 tile.defeatedcrow.largeBottle.name=瓶詰めナッツ
 tile.defeatedcrow.largeBottle.name=瓶詰めベリージャム
-tile.defeatedcrow.largeBottle.name=空の一升瓶
+tile.defeatedcrow.largeBottle.name=焼酎ボトル
 tile.defeatedcrow.largeBottle.name=日本酒ボトル
 tile.defeatedcrow.largeBottle.name=ビールボトル
 tile.defeatedcrow.largeBottle.name=ワインボトル
@@ -264,7 +265,7 @@ tile.defeatedcrow.largeBottle.name=カラメル大瓶
 tile.defeatedcrow.largeBottle.name=ハチミツ大瓶
 tile.defeatedcrow.largeBottle.name=瓶詰めナッツ
 tile.defeatedcrow.largeBottle.name=瓶詰めベリージャム
-tile.defeatedcrow.largeBottle.name=空の一升瓶
+tile.defeatedcrow.largeBottle.name=焼酎ボトル
 tile.defeatedcrow.largeBottle.name=日本酒ボトル
 tile.defeatedcrow.largeBottle.name=ビールボトル
 tile.defeatedcrow.largeBottle.name=ワインボトル
@@ -279,7 +280,7 @@ tile.defeatedcrow.largeBottle.name=カラメル大瓶
 tile.defeatedcrow.largeBottle.name=ハチミツ大瓶
 tile.defeatedcrow.largeBottle.name=瓶詰めナッツ
 tile.defeatedcrow.largeBottle.name=瓶詰めベリージャム
-tile.defeatedcrow.largeBottle.name=空の一升瓶
+tile.defeatedcrow.largeBottle.name=焼酎ボトル
 tile.defeatedcrow.largeBottle.name=日本酒ボトル
 tile.defeatedcrow.largeBottle.name=ビールボトル
 tile.defeatedcrow.largeBottle.name=ワインボトル
@@ -294,7 +295,7 @@ tile.defeatedcrow.largeBottle.name=カラメル大瓶
 tile.defeatedcrow.largeBottle.name=ハチミツ大瓶
 tile.defeatedcrow.largeBottle.name=瓶詰めナッツ
 tile.defeatedcrow.largeBottle.name=瓶詰めベリージャム
-tile.defeatedcrow.largeBottle.name=空の一升瓶
+tile.defeatedcrow.largeBottle.name=焼酎ボトル
 tile.defeatedcrow.largeBottle.name=日本酒ボトル
 tile.defeatedcrow.largeBottle.name=ビールボトル
 tile.defeatedcrow.largeBottle.name=ワインボトル
@@ -309,7 +310,7 @@ tile.defeatedcrow.largeBottle.name=カラメル大瓶
 tile.defeatedcrow.largeBottle.name=ハチミツ大瓶
 tile.defeatedcrow.largeBottle.name=瓶詰めナッツ
 tile.defeatedcrow.largeBottle.name=瓶詰めベリージャム
-tile.defeatedcrow.largeBottle.name=空の一升瓶
+tile.defeatedcrow.largeBottle.name=焼酎ボトル
 tile.defeatedcrow.largeBottle.name=日本酒ボトル
 tile.defeatedcrow.largeBottle.name=ビールボトル
 tile.defeatedcrow.largeBottle.name=ワインボトル
@@ -324,7 +325,7 @@ tile.defeatedcrow.largeBottle.name=カラメル大瓶
 tile.defeatedcrow.largeBottle.name=ハチミツ大瓶
 tile.defeatedcrow.largeBottle.name=瓶詰めナッツ
 tile.defeatedcrow.largeBottle.name=瓶詰めベリージャム
-tile.defeatedcrow.largeBottle.name=空の一升瓶
+tile.defeatedcrow.largeBottle.name=焼酎ボトル
 tile.defeatedcrow.largeBottle.name=日本酒ボトル
 tile.defeatedcrow.largeBottle.name=ビールボトル
 tile.defeatedcrow.largeBottle.name=ワインボトル
@@ -399,6 +400,7 @@ item.defeatedcrow.gratedApple_8.name=ぶどうペースト
 item.defeatedcrow.chalcedonyKnife.name=玉髄のナイフ
 item.defeatedcrow.firestarter.name=上質な着火具
 item.defeatedcrow.chalcedonyStoneCutter.name=玉髄の石切り槌
+item.defeatedcrow.monocle.name=	玉髄のモノクル
 item.defeatedcrow.clam_0.name=ハマグリ
 item.defeatedcrow.clam_1.name=焼きハマグリ
 item.defeatedcrow.clam_2.name=焦げた肉片
@@ -437,7 +439,7 @@ item.defeatedcrow.itemCordial_12.name=梅酒
 item.defeatedcrow.itemCordial_13.name=梅酒
 item.defeatedcrow.itemCordial_14.name=梅酒
 item.defeatedcrow.itemCordial_15.name=梅酒
-item.defeatedcrow.itemBottle_0.name=空の一升瓶
+item.defeatedcrow.itemBottle_0.name=焼酎ボトル
 item.defeatedcrow.itemBottle_1.name=日本酒ボトル
 item.defeatedcrow.itemBottle_2.name=ビールボトル
 item.defeatedcrow.itemBottle_3.name=ワインボトル
@@ -452,7 +454,7 @@ item.defeatedcrow.itemBottle_11.name=カラメル大瓶
 item.defeatedcrow.itemBottle_12.name=ハチミツ大瓶
 item.defeatedcrow.itemBottle_13.name=瓶詰めナッツ
 item.defeatedcrow.itemBottle_14.name=瓶詰めベリージャム
-item.defeatedcrow.itemBottle_16.name=空の一升瓶
+item.defeatedcrow.itemBottle_16.name=焼酎ボトル
 item.defeatedcrow.itemBottle_17.name=日本酒ボトル
 item.defeatedcrow.itemBottle_18.name=ビールボトル
 item.defeatedcrow.itemBottle_19.name=ワインボトル
@@ -467,7 +469,7 @@ item.defeatedcrow.itemBottle_27.name=カラメル大瓶
 item.defeatedcrow.itemBottle_28.name=ハチミツ大瓶
 item.defeatedcrow.itemBottle_29.name=瓶詰めナッツ
 item.defeatedcrow.itemBottle_30.name=瓶詰めベリージャム
-item.defeatedcrow.itemBottle_32.name=空の一升瓶
+item.defeatedcrow.itemBottle_32.name=焼酎ボトル
 item.defeatedcrow.itemBottle_33.name=日本酒ボトル
 item.defeatedcrow.itemBottle_34.name=ビールボトル
 item.defeatedcrow.itemBottle_35.name=ワインボトル
@@ -482,7 +484,7 @@ item.defeatedcrow.itemBottle_43.name=カラメル大瓶
 item.defeatedcrow.itemBottle_44.name=ハチミツ大瓶
 item.defeatedcrow.itemBottle_45.name=瓶詰めナッツ
 item.defeatedcrow.itemBottle_46.name=瓶詰めベリージャム
-item.defeatedcrow.itemBottle_48.name=空の一升瓶
+item.defeatedcrow.itemBottle_48.name=焼酎ボトル
 item.defeatedcrow.itemBottle_49.name=日本酒ボトル
 item.defeatedcrow.itemBottle_50.name=ビールボトル
 item.defeatedcrow.itemBottle_51.name=ワインボトル
@@ -497,7 +499,7 @@ item.defeatedcrow.itemBottle_59.name=カラメル大瓶
 item.defeatedcrow.itemBottle_60.name=ハチミツ大瓶
 item.defeatedcrow.itemBottle_61.name=瓶詰めナッツ
 item.defeatedcrow.itemBottle_62.name=瓶詰めベリージャム
-item.defeatedcrow.itemBottle_64.name=空の一升瓶
+item.defeatedcrow.itemBottle_64.name=焼酎ボトル
 item.defeatedcrow.itemBottle_65.name=日本酒ボトル
 item.defeatedcrow.itemBottle_66.name=ビールボトル
 item.defeatedcrow.itemBottle_67.name=ワインボトル
@@ -512,7 +514,7 @@ item.defeatedcrow.itemBottle_75.name=カラメル大瓶
 item.defeatedcrow.itemBottle_76.name=ハチミツ大瓶
 item.defeatedcrow.itemBottle_77.name=瓶詰めナッツ
 item.defeatedcrow.itemBottle_78.name=瓶詰めベリージャム
-item.defeatedcrow.itemBottle_80.name=空の一升瓶
+item.defeatedcrow.itemBottle_80.name=焼酎ボトル
 item.defeatedcrow.itemBottle_81.name=日本酒ボトル
 item.defeatedcrow.itemBottle_82.name=ビールボトル
 item.defeatedcrow.itemBottle_83.name=ワインボトル
@@ -527,7 +529,7 @@ item.defeatedcrow.itemBottle_91.name=カラメル大瓶
 item.defeatedcrow.itemBottle_92.name=ハチミツ大瓶
 item.defeatedcrow.itemBottle_93.name=瓶詰めナッツ
 item.defeatedcrow.itemBottle_94.name=瓶詰めベリージャム
-item.defeatedcrow.itemBottle_96.name=空の一升瓶
+item.defeatedcrow.itemBottle_96.name=焼酎ボトル
 item.defeatedcrow.itemBottle_97.name=日本酒ボトル
 item.defeatedcrow.itemBottle_98.name=ビールボトル
 item.defeatedcrow.itemBottle_99.name=ワインボトル
@@ -542,7 +544,7 @@ item.defeatedcrow.itemBottle_107.name=カラメル大瓶
 item.defeatedcrow.itemBottle_108.name=ハチミツ大瓶
 item.defeatedcrow.itemBottle_109.name=瓶詰めナッツ
 item.defeatedcrow.itemBottle_110.name=瓶詰めベリージャム
-item.defeatedcrow.itemBottle_112.name=空の一升瓶
+item.defeatedcrow.itemBottle_112.name=焼酎ボトル
 item.defeatedcrow.itemBottle_113.name=日本酒ボトル
 item.defeatedcrow.itemBottle_114.name=ビールボトル
 item.defeatedcrow.itemBottle_115.name=ワインボトル
