--- a/resources/assets/dcsapplemilk/lang/en_US.lang
+++ b/resources/assets/dcsapplemilk/lang/en_US.lang
@@ -219,8 +219,7 @@ tile.defeatedcrow.blockCordial_0.name=Apple Liquor Bottle
 tile.defeatedcrow.blockCordial_1.name=Tea Liquor Bottle
 tile.defeatedcrow.blockCordial_2.name=Cassis Liquor Bottle
 tile.defeatedcrow.blockCordial_3.name=Plum Liquor Bottle
-tile.defeatedcrow.emptyBottle.name=Empty Large Bottle
-tile.defeatedcrow.largeBottle.name=Shothu Bottle
+tile.defeatedcrow.largeBottle.name=Empty Large Bottle
 tile.defeatedcrow.largeBottle.name=Sake Bottle
 tile.defeatedcrow.largeBottle.name=Beer Bottle
 tile.defeatedcrow.largeBottle.name=Wine Bottle
@@ -235,7 +234,7 @@ tile.defeatedcrow.largeBottle.name=Caramel Bottle
 tile.defeatedcrow.largeBottle.name=Honey Bottle
 tile.defeatedcrow.largeBottle.name=Nuts Bottle
 tile.defeatedcrow.largeBottle.name=Berry Jam Bottle
-tile.defeatedcrow.largeBottle.name=Shothu Bottle
+tile.defeatedcrow.largeBottle.name=Empty Large Bottle
 tile.defeatedcrow.largeBottle.name=Sake Bottle
 tile.defeatedcrow.largeBottle.name=Beer Bottle
 tile.defeatedcrow.largeBottle.name=Wine Bottle
@@ -250,7 +249,7 @@ tile.defeatedcrow.largeBottle.name=Caramel Bottle
 tile.defeatedcrow.largeBottle.name=Honey Bottle
 tile.defeatedcrow.largeBottle.name=Nuts Bottle
 tile.defeatedcrow.largeBottle.name=Berry Jam Bottle
-tile.defeatedcrow.largeBottle.name=Shothu Bottle
+tile.defeatedcrow.largeBottle.name=Empty Large Bottle
 tile.defeatedcrow.largeBottle.name=Sake Bottle
 tile.defeatedcrow.largeBottle.name=Beer Bottle
 tile.defeatedcrow.largeBottle.name=Wine Bottle
@@ -265,7 +264,7 @@ tile.defeatedcrow.largeBottle.name=Caramel Bottle
 tile.defeatedcrow.largeBottle.name=Honey Bottle
 tile.defeatedcrow.largeBottle.name=Nuts Bottle
 tile.defeatedcrow.largeBottle.name=Berry Jam Bottle
-tile.defeatedcrow.largeBottle.name=Shothu Bottle
+tile.defeatedcrow.largeBottle.name=Empty Large Bottle
 tile.defeatedcrow.largeBottle.name=Sake Bottle
 tile.defeatedcrow.largeBottle.name=Beer Bottle
 tile.defeatedcrow.largeBottle.name=Wine Bottle
@@ -280,7 +279,7 @@ tile.defeatedcrow.largeBottle.name=Caramel Bottle
 tile.defeatedcrow.largeBottle.name=Honey Bottle
 tile.defeatedcrow.largeBottle.name=Nuts Bottle
 tile.defeatedcrow.largeBottle.name=Berry Jam Bottle
-tile.defeatedcrow.largeBottle.name=Shothu Bottle
+tile.defeatedcrow.largeBottle.name=Empty Large Bottle
 tile.defeatedcrow.largeBottle.name=Sake Bottle
 tile.defeatedcrow.largeBottle.name=Beer Bottle
 tile.defeatedcrow.largeBottle.name=Wine Bottle
@@ -295,7 +294,7 @@ tile.defeatedcrow.largeBottle.name=Caramel Bottle
 tile.defeatedcrow.largeBottle.name=Honey Bottle
 tile.defeatedcrow.largeBottle.name=Nuts Bottle
 tile.defeatedcrow.largeBottle.name=Berry Jam Bottle
-tile.defeatedcrow.largeBottle.name=Shothue Bottle
+tile.defeatedcrow.largeBottle.name=Empty Large Bottle
 tile.defeatedcrow.largeBottle.name=Sake Bottle
 tile.defeatedcrow.largeBottle.name=Beer Bottle
 tile.defeatedcrow.largeBottle.name=Wine Bottle
@@ -310,7 +309,7 @@ tile.defeatedcrow.largeBottle.name=Caramel Bottle
 tile.defeatedcrow.largeBottle.name=Honey Bottle
 tile.defeatedcrow.largeBottle.name=Nuts Bottle
 tile.defeatedcrow.largeBottle.name=Berry Jam Bottle
-tile.defeatedcrow.largeBottle.name=Shothu Bottle
+tile.defeatedcrow.largeBottle.name=Empty Large Bottle
 tile.defeatedcrow.largeBottle.name=Sake Bottle
 tile.defeatedcrow.largeBottle.name=Beer Bottle
 tile.defeatedcrow.largeBottle.name=Wine Bottle
@@ -325,7 +324,7 @@ tile.defeatedcrow.largeBottle.name=Caramel Bottle
 tile.defeatedcrow.largeBottle.name=Honey Bottle
 tile.defeatedcrow.largeBottle.name=Nuts Bottle
 tile.defeatedcrow.largeBottle.name=Berry Jam Bottle
-tile.defeatedcrow.largeBottle.name=Shothu Bottle
+tile.defeatedcrow.largeBottle.name=Empty Large Bottle
 tile.defeatedcrow.largeBottle.name=Sake Bottle
 tile.defeatedcrow.largeBottle.name=Beer Bottle
 tile.defeatedcrow.largeBottle.name=Wine Bottle
@@ -400,7 +399,6 @@ item.defeatedcrow.gratedApple_8.name=Grated Grape
 item.defeatedcrow.chalcedonyKnife.name=Chalcedony Knife
 item.defeatedcrow.firestarter.name=Fire Starter
 item.defeatedcrow.chalcedonyStoneCutter.name=Chalcedony Stone Cutter
-item.defeatedcrow.monocle.name=Chalcedony Monocle
 item.defeatedcrow.clam_0.name=Clam
 item.defeatedcrow.clam_1.name=Cooked Clam
 item.defeatedcrow.clam_2.name=Burnt Meat
@@ -439,7 +437,7 @@ item.defeatedcrow.itemCordial_12.name=Plum Liquor Bottle
 item.defeatedcrow.itemCordial_13.name=Plum Liquor Bottle
 item.defeatedcrow.itemCordial_14.name=Plum Liquor Bottle
 item.defeatedcrow.itemCordial_15.name=Plum Liquor Bottle
-item.defeatedcrow.itemBottle_0.name=Shothu Bottle
+item.defeatedcrow.itemBottle_0.name=Empty Large Bottle
 item.defeatedcrow.itemBottle_1.name=Sake Bottle
 item.defeatedcrow.itemBottle_2.name=Beer Bottle
 item.defeatedcrow.itemBottle_3.name=Wine Bottle
@@ -454,7 +452,7 @@ item.defeatedcrow.itemBottle_11.name=Caramel Bottle
 item.defeatedcrow.itemBottle_12.name=Honey Bottle
 item.defeatedcrow.itemBottle_13.name=Nuts Bottle
 item.defeatedcrow.itemBottle_14.name=Berry Jam Bottle
-item.defeatedcrow.itemBottle_16.name=Shothu Bottle
+item.defeatedcrow.itemBottle_16.name=Empty Large Bottle
 item.defeatedcrow.itemBottle_17.name=Sake Bottle
 item.defeatedcrow.itemBottle_18.name=Beer Bottle
 item.defeatedcrow.itemBottle_19.name=Wine Bottle
@@ -469,7 +467,7 @@ item.defeatedcrow.itemBottle_27.name=Caramel Bottle
 item.defeatedcrow.itemBottle_28.name=Honey Bottle
 item.defeatedcrow.itemBottle_29.name=Nuts Bottle
 item.defeatedcrow.itemBottle_30.name=Berry Jam Bottle
-item.defeatedcrow.itemBottle_32.name=Shothu Bottle
+item.defeatedcrow.itemBottle_32.name=Empty Large Bottle
 item.defeatedcrow.itemBottle_33.name=Sake Bottle
 item.defeatedcrow.itemBottle_34.name=Beer Bottle
 item.defeatedcrow.itemBottle_35.name=Wine Bottle
@@ -484,7 +482,7 @@ item.defeatedcrow.itemBottle_43.name=Caramel Bottle
 item.defeatedcrow.itemBottle_44.name=Honey Bottle
 item.defeatedcrow.itemBottle_45.name=Nuts Bottle
 item.defeatedcrow.itemBottle_46.name=Berry Jam Bottle
-item.defeatedcrow.itemBottle_48.name=Shothu Bottle
+item.defeatedcrow.itemBottle_48.name=Empty Large Bottle
 item.defeatedcrow.itemBottle_49.name=Sake Bottle
 item.defeatedcrow.itemBottle_50.name=Beer Bottle
 item.defeatedcrow.itemBottle_51.name=Wine Bottle
@@ -499,7 +497,7 @@ item.defeatedcrow.itemBottle_59.name=Caramel Bottle
 item.defeatedcrow.itemBottle_60.name=Honey Bottle
 item.defeatedcrow.itemBottle_61.name=Nuts Bottle
 item.defeatedcrow.itemBottle_62.name=Berry Jam Bottle
-item.defeatedcrow.itemBottle_64.name=Shothu Bottle
+item.defeatedcrow.itemBottle_64.name=Empty Large Bottle
 item.defeatedcrow.itemBottle_65.name=Sake Bottle
 item.defeatedcrow.itemBottle_66.name=Beer Bottle
 item.defeatedcrow.itemBottle_67.name=Wine Bottle
@@ -514,7 +512,7 @@ item.defeatedcrow.itemBottle_75.name=Caramel Bottle
 item.defeatedcrow.itemBottle_76.name=Honey Bottle
 item.defeatedcrow.itemBottle_77.name=Nuts Bottle
 item.defeatedcrow.itemBottle_78.name=Berry Jam Bottle
-item.defeatedcrow.itemBottle_80.name=Shothu Bottle
+item.defeatedcrow.itemBottle_80.name=Empty Large Bottle
 item.defeatedcrow.itemBottle_81.name=Sake Bottle
 item.defeatedcrow.itemBottle_82.name=Beer Bottle
 item.defeatedcrow.itemBottle_83.name=Wine Bottle
@@ -529,7 +527,7 @@ item.defeatedcrow.itemBottle_91.name=Caramel Bottle
 item.defeatedcrow.itemBottle_92.name=Honey Bottle
 item.defeatedcrow.itemBottle_93.name=Nuts Bottle
 item.defeatedcrow.itemBottle_94.name=Berry Jam Bottle
-item.defeatedcrow.itemBottle_96.name=Shothu Bottle
+item.defeatedcrow.itemBottle_96.name=Empty Large Bottle
 item.defeatedcrow.itemBottle_97.name=Sake Bottle
 item.defeatedcrow.itemBottle_98.name=Beer Bottle
 item.defeatedcrow.itemBottle_99.name=Wine Bottle
@@ -544,7 +542,7 @@ item.defeatedcrow.itemBottle_107.name=Caramel Bottle
 item.defeatedcrow.itemBottle_108.name=Honey Bottle
 item.defeatedcrow.itemBottle_109.name=Nuts Bottle
 item.defeatedcrow.itemBottle_110.name=Berry Jam Bottle
-item.defeatedcrow.itemBottle_112.name=Shothu Bottle
+item.defeatedcrow.itemBottle_112.name=Empty Large Bottle
 item.defeatedcrow.itemBottle_113.name=Sake Bottle
 item.defeatedcrow.itemBottle_114.name=Beer Bottle
 item.defeatedcrow.itemBottle_115.name=Wine Bottle
